<resources>
    <string name="app_name">Movies</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="movie_poster">Movie poster</string>
    <string name="released_details">Released:</string>
    <string name="movie_trailer">movie trailer</string>
    <string name="overview">Overview:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_thread_handler_activity">Open Thread Handler Activity</string>
    <string name="thread_create">Create</string>
    <string name="thread_start">Start</string>
    <string name="thread_stop">Stop</string>
    <string name="fragment_handler_exe_title">This is Thread Handler Activity</string>


    <string name="msg_should_create_task">Must click \"create\" task first</string>
    <string name="msg_thread_oncreate">Thread Task created</string>
    <string name="msg_thread_onstart">Thread Task Started</string>
    <string name="msg_thread_oncancel">Thread Task cancelled</string>
    <string name="msg_preexecute">Pre execute run</string>
    <string name="msg_postexecute">Post execute run</string>

    <string name="done">Done!</string>
    <string name="task_created">Job created</string>

    <string name="error_load_movies">Can\'t load movies: %1$s</string>
    <string name="error_load_trailer">Can\'t load trailer: %1$s</string>
</resources>
