<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailsActivity">

        <ImageView
            android:id="@+id/iv_details_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/movie_backdrop" />

        <ImageView
            android:id="@+id/im_details_image"
            android:layout_width="116dp"
            android:layout_height="175dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_details_poster"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/tv_title_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/text_title_size"
            android:textColor="@color/purple"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/im_details_image"
            app:layout_constraintTop_toTopOf="@id/im_details_image"
            tools:text="@tools:sample/cities"/>

        <TextView
            android:id="@+id/tv_released_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/released_details"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_details"
            app:layout_constraintStart_toStartOf="@id/tv_title_details"/>

        <TextView
            android:id="@+id/tv_details_released_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_released_details"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_released_details"
            tools:text="@tools:sample/date/ddmmyy" />

        <Button
            android:id="@+id/b_movie_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_trailer"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/tv_released_details"
            app:layout_constraintTop_toBottomOf="@id/tv_released_details"/>

        <TextView
            android:id="@+id/tv_details_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/im_details_image"
            app:layout_constraintStart_toStartOf="@id/im_details_image"/>

        <TextView
            android:id="@+id/tv_overview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tv_details_overview"
            tools:text="@tools:sample/lorem/random"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>